# ros-book-sample-code

./: LICENSE  README.md  operator.yaml  runtime.yaml  testing-setup.bash
.github/workflows/: lint.yml  test.yml
src/fake_robot/: CMakeLists.txt  package.xml
src/fake_robot/include/fake_robot/: fake_laser.hpp  fake_laser_listener.hpp  laser_listener.hpp  visibility_control.hpp
src/fake_robot/src/: fake_laser.cpp  fake_laser_listener.cpp  laser_listener.cpp
src/remote_operator/: CMakeLists.txt  package.xml
src/remote_operator/config/: remote_operator.rviz
src/remote_operator/launch/: remote_operator.launch.py
src/robot_runtime/: CMakeLists.txt  package.xml
src/robot_runtime/launch/: robot_runtime.launch.py
