<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>remote_operator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="emerson@todo.todo">emerson</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>

  <!--
  This isn't always necessary, but it can be useful to have a build of the runtime,
  in the native architecture, so that you definitely have all message types, and can
  run nodes locally.
  -->
  <exec_depend>robot_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
